Add event handlers and integrate events with triggers (#1024)