@@ -17,6 +17,9 @@ import com.czertainly.core.dao.entity.ApprovalStep;
 import com.czertainly.core.dao.repository.ApprovalRecipientRepository;
 import com.czertainly.core.dao.repository.ApprovalRepository;
 import com.czertainly.core.dao.repository.ApprovalStepRepository;
+import com.czertainly.core.events.handlers.ApprovalClosedEventHandler;
+import com.czertainly.core.events.handlers.ApprovalRequestedEventHandler;
+import com.czertainly.core.events.transaction.UpdateCertificateHistoryEvent;
 import com.czertainly.core.messaging.model.ActionMessage;
 import com.czertainly.core.messaging.model.NotificationRecipient;
 import com.czertainly.core.messaging.producers.ActionProducer;
@@ -35,6 +38,7 @@ import org.apache.commons.lang3.function.TriFunction;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -57,11 +61,11 @@ public class ApprovalServiceImpl implements ApprovalService {
 
     private ApprovalRecipientHelper approvalRecipientHelper;
 
-    private NotificationProducer notificationProducer;
-
     private ActionProducer actionProducer;
 
     private EventProducer eventProducer;
+
+    private ApplicationEventPublisher applicationEventPublisher;
 
     @Override
     @ExternalAuthorization(resource = Resource.APPROVAL, action = ResourceAction.LIST)
@@ -175,7 +179,7 @@ public class ApprovalServiceImpl implements ApprovalService {
 
         // TODO: produce only for certificates for now until refactoring and uniting of event history for all resources
         if (resource == Resource.CERTIFICATE) {
-            eventProducer.produceCertificateEventMessage(objectUuid, CertificateEvent.APPROVAL_REQUEST.getCode(), CertificateEventStatus.SUCCESS.toString(), String.format("Approval requested for action %s with approval profile %s", resourceAction.getCode(), approvalProfileVersion.getApprovalProfile().getName()), null);
+            applicationEventPublisher.publishEvent(new UpdateCertificateHistoryEvent(objectUuid, CertificateEvent.APPROVAL_REQUEST, CertificateEventStatus.SUCCESS, "Approval requested for action %s with approval profile %s".formatted(resourceAction.getCode(), approvalProfileVersion.getApprovalProfile().getName()), null));
         }
 
         processApprovalToTheNextStep(approval.getUuid().toString(), null);
@@ -256,13 +260,8 @@ public class ApprovalServiceImpl implements ApprovalService {
                     || lastProcessedApprovalRecipient.getApprovalStep().getOrder() != nextApprovalStep.getOrder()) {
 
                 final Approval approval = findApprovalByUuid(approvalUuid);
-                notificationProducer.produceNotificationApprovalRequested(
-                        Resource.APPROVAL,
-                        approval.getUuid(),
-                        prepareNotificationRecipients(nextApprovalStep),
-                        approval.mapToDto(),
-                        approval.getCreatorUuid().toString());
-                logger.info("Notification message about new approvals needed for the step was sent. Approval UUID: {}", approvalUuid);
+                eventProducer.produceMessage(ApprovalRequestedEventHandler.constructEventMessage(approval.getUuid(), nextApprovalStep.mapToDto()));
+                logger.debug("Notification message about new approvals needed for the step was sent. Approval UUID: {}", approvalUuid);
             }
         } else {
             logger.info("There is no more steps and the approval can be closed as successful.");
@@ -312,28 +311,7 @@ public class ApprovalServiceImpl implements ApprovalService {
         actionProducer.produceMessage(actionMessage);
 
         // send event of approval closed
-        // TODO: produce only for certificates for now until refactoring and uniting of event history for all resources
-        ApprovalDto approvalDto = approval.mapToDto();
-        if (approval.getResource() == Resource.CERTIFICATE) {
-            eventProducer.produceCertificateEventMessage(approval.getObjectUuid(), CertificateEvent.APPROVAL_CLOSE.getCode(), CertificateEventStatus.SUCCESS.toString(), String.format("Approval for action %s with approval profile %s closed with status %s", approval.getAction().getCode(), approvalDto.getApprovalProfileName(), approvalStatus.getLabel()), null);
-        }
-
-        // send notification of closing approval
-        notificationProducer.produceNotificationApprovalClosed(approval.getResource(), approval.getObjectUuid(),
-                NotificationRecipient.buildUserNotificationRecipient(approval.getCreatorUuid()),
-                approvalDto, approval.getCreatorUuid().toString());
-        logger.info(String.format("Notification that the approval was closed with status %s was sent. Approval UUID: %s", approvalStatus, approval.getUuid()));
-    }
-
-    private List<NotificationRecipient> prepareNotificationRecipients(final ApprovalStep approvalStep) {
-        if (approvalStep.getUserUuid() != null) {
-            return NotificationRecipient.buildUserNotificationRecipient(approvalStep.getUserUuid());
-        } else if (approvalStep.getRoleUuid() != null) {
-            return NotificationRecipient.buildRoleNotificationRecipient(approvalStep.getRoleUuid());
-        } else if (approvalStep.getGroupUuid() != null) {
-            return NotificationRecipient.buildGroupNotificationRecipient(approvalStep.getGroupUuid());
-        }
-        throw new ValidationException(ValidationError.create("There is not specified recipients"));
+        eventProducer.produceMessage(ApprovalClosedEventHandler.constructEventMessage(approval.getUuid()));
     }
 
     private Approval findApprovalByUuid(final String uuid) throws NotFoundException {
@@ -381,11 +359,6 @@ public class ApprovalServiceImpl implements ApprovalService {
     }
 
     @Autowired
-    public void setNotificationProducer(NotificationProducer notificationProducer) {
-        this.notificationProducer = notificationProducer;
-    }
-
-    @Autowired
     public void setActionProducer(ActionProducer actionProducer) {
         this.actionProducer = actionProducer;
     }
@@ -393,6 +366,11 @@ public class ApprovalServiceImpl implements ApprovalService {
     @Autowired
     public void setEventProducer(EventProducer eventProducer) {
         this.eventProducer = eventProducer;
+    }
+
+    @Autowired
+    public void setApplicationEventPublisher(ApplicationEventPublisher applicationEventPublisher) {
+        this.applicationEventPublisher = applicationEventPublisher;
     }
 
     @Autowired
